# pyright-pretty

./: .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  Makefile  README.md  mise.toml  package-lock.json  package.json  pyproject.toml  pyright_pretty.py  tsconfig.json
src/: index.js  index.ts
src/pyright_pretty/: __init__.py
tests/: tests.py
tests/cycle/a/: cycle.py
tests/cycle/b/: cycle.py
